# Road2Engineering_SoftwareEngineering

./: .gitignore  playground.py
object_oriented_programming/: 1_classes_objects.py  2_encapsulation.py  3_inheritance_polymorphism.py  4_abstraction.py
object_oriented_programming/exercices/: ex1_classes_objects.py  ex2_encapsulation.py  ex3_inheritance.py
salutations-maker-repo-folder/: playground.py  setup.cfg  setup.py
