[metadata]
name = salutations-maker
version = 0.0.1
author = Nathan Derave
author-email = nathan.derave@accenture.com
description = A package to say hello
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
long-description-content-type = text/markdown

[options]
python_requires = >= 3.6
package_dir=
 =src

[options.extras_require]
dev =
    pytest
    flake8
    tox